--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,1 +1,19 @@
-<%- includes('../includes/head') %>
+<head>
+    <link href="./css/style.css" rel="stylesheet" />
+    <link href="./css/books.css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= title %></title>
+</head>
+<body>
+    
+<header>
+    <nav>
+        <div class="container">
+            <ul class="main-menu">
+                <li><a href="/">Main</a></li>
+                <li><a href="#">Add book</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
