--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,16 @@ body {
     justify-content: center;
     align-items: center;
 }
+header {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    background-color: whitesmoke;
+    position: fixed;
+    top: 0;
+    min-height: 75px;
+}
 .main {
     display: flex;
     flex-direction: column;
@@ -13,6 +23,34 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
+}
+nav {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 1230px;
+    width: 100%;
+}
+.main-menu {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.main-menu li {
+    width: 200px;
+    margin-right: 20px;
+    list-style: none;
 }
 table.base{
 	width: 100%;
